# hs-m3u8

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/example/: jav_1.py  jav_2.py  jav_3.py  movie_1.py  movie_2.py
src/hs_m3u8/: __init__.py  main.py
